Sutter Health/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Incumbent_Carriers__c</fullName>
        <label>Carrier Partners</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AETNA</fullName>
                </value>
                <value>
                    <fullName>ANTHEM</fullName>
                </value>
                <value>
                    <fullName>BLUE SHIELD</fullName>
                </value>
                <value>
                    <fullName>CAL CHOICE</fullName>
                </value>
                <value>
                    <fullName>CALPERS</fullName>
                </value>
                <value>
                    <fullName>CHINESE COMMUNITY HEALTH PLAN</fullName>
                </value>
                <value>
                    <fullName>CIGNA</fullName>
                </value>
                <value>
                    <fullName>HEALTH NET</fullName>
                </value>
                <value>
                    <fullName>KAISER</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>SELF FUNDED</fullName>
                </value>
                <value>
                    <fullName>SHP</fullName>
                </value>
                <value>
                    <fullName>UNITED Health Care</fullName>
                </value>
                <value>
                    <fullName>WHA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_Renewal_Increase__c</fullName>
        <label>Incumbent Renewal Increase</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Child_Record_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Child Record Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be true only if the Opportunity is Latest Modified with Latest Plan End Date and Effective Date.</description>
        <label>Latest Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_and_Sales_Primary_Contact_Name__c</fullName>
        <formula>Account.Broker__r.Marketing_and_Sales_Primary_Contact_Name__r.FirstName  &amp; 
&quot; &quot; &amp;
Account.Broker__r.Marketing_and_Sales_Primary_Contact_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing and Sales Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Commission_Type__c</fullName>
        <label>Medical Commission Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PMPM</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>Flat Amount</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NTE_Offered__c</fullName>
        <label>NTE Offered %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NewOrRenewal__c</fullName>
        <description>Shows if an opportunity is new or renewal type</description>
        <formula>IF( Renewed_Opportunity__c ,&apos;Renewal&apos;, &apos;New&apos;)</formula>
        <inlineHelpText>Shows if an opportunity is new or renewal type</inlineHelpText>
        <label>NewOrRenewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Opportunity__c</fullName>
        <label>Old Opportunity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req 3268  -- Checked means the renewal opportunity has been created for this.</description>
        <label>Renewal Opportunity Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Creator__c</fullName>
        <label>Opportunity Creator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Shared_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Shared By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Competitive_Carrier2__c</fullName>
        <description>Req-3358</description>
        <label>Other Competitive Carrier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitive_Carrier3__c</fullName>
        <description>Req-3358</description>
        <label>Other Competitive Carrier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitive_Carrier__c</fullName>
        <label>Other Competitive Carrier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>Comment field to capture when Reason Lost equals Other</description>
        <inlineHelpText>Enter Comment for Other - Reason Lost</inlineHelpText>
        <label>Closed Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_Area_EEs__c</fullName>
        <label>Out of Area EEs</label>
        <summaryFilterItems>
            <field>Census__c.Region__c</field>
            <operation>contains</operation>
            <value>Out of Service Area</value>
        </summaryFilterItems>
        <summaryForeignKey>Census__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Out_of_Area__c</fullName>
        <label>Out-of-Area</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverrideBrokerAndBrokerRep__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check &quot;OverrideBrokerAndBrokerRep&quot; field , if &quot;Broker&quot; &amp; &quot;Broker Rep&quot; field is changed On Opportunity record and want to apply these changed values on Account record.</inlineHelpText>
        <label>OverrideBrokerAndBrokerRep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Effective_Date__c</fullName>
        <label>Plan Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <formula>TEXT(YEAR( Plan_Effective_Date__c ))</formula>
        <label>Plan Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_end_date__c</fullName>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Please_specify_other__c</fullName>
        <label>Please specify other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Membership__c</fullName>
        <formula>Projected_Subscribers__c * 1.65</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Membership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Subscribers__c</fullName>
        <label>Projected Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchased__c</fullName>
        <label>Purchased</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Owner__c</fullName>
        <label>Quote Owner</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Presented_Date__c</fullName>
        <label>Quote Presented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quoted_PMPM__c</fullName>
        <label>Quoted PMPM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Due_Date__c</fullName>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Received_Date__c</fullName>
        <label>RFP Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Sent_to_UW_Date__c</fullName>
        <label>RFP Sent to UW Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_Tier__c</fullName>
        <description>Req 3389</description>
        <label>Rate Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <description>Reason Lost options</description>
        <inlineHelpText>Select an option</inlineHelpText>
        <label>Reason Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAD RISK</fullName>
                </value>
                <value>
                    <fullName>BID CHECK</fullName>
                </value>
                <value>
                    <fullName>INCOMPLETE RFP</fullName>
                </value>
                <value>
                    <fullName>INCUMBENT SECOND LOOK</fullName>
                </value>
                <value>
                    <fullName>NETWORK</fullName>
                </value>
                <value>
                    <fullName>NON BOR / BOR LOST</fullName>
                </value>
                <value>
                    <fullName>NO PPO OPTION</fullName>
                </value>
                <value>
                    <fullName>NOT COMPETITIVE</fullName>
                </value>
                <value>
                    <fullName>PLAN/PRODUCT CHOICES</fullName>
                </value>
                <value>
                    <fullName>PLAN/PRODUCT CHOICES (NOT PPO)</fullName>
                </value>
                <value>
                    <fullName>UW GUIDELINES</fullName>
                </value>
                <value>
                    <fullName>UW GUIDELINES CLAIMS</fullName>
                </value>
                <value>
                    <fullName>UW GUIDELINES PARTICIPATION</fullName>
                </value>
                <value>
                    <fullName>SERVICE</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Requote__c</fullName>
        <description>Reason for Requote options</description>
        <inlineHelpText>Select an option</inlineHelpText>
        <label>Lost Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_Lost__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accessibility</fullName>
                </value>
                <value>
                    <fullName>Benefit Plan</fullName>
                </value>
                <value>
                    <fullName>Change Requested by Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>High Renewal %</fullName>
                </value>
                <value>
                    <fullName>High Value Claims</fullName>
                </value>
                <value>
                    <fullName>Kaiser Lowered Rates</fullName>
                </value>
                <value>
                    <fullName>Low Participation</fullName>
                </value>
                <value>
                    <fullName>No Medicare</fullName>
                </value>
                <value>
                    <fullName>No PPO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Lowered Rates</fullName>
                </value>
                <value>
                    <fullName>Plan Design</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>Too many out of area</fullName>
                </value>
                <value>
                    <fullName>Wait Times</fullName>
                </value>
                <value>
                    <fullName>WHA Lowered Rates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Salesforce Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewed_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Identify normal Opportunities and Renewed Opportunities</description>
        <label>Renewed Opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retiree__c</fullName>
        <label>Medicare/Retirees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHMMN_Assigned_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SHMMN Assigned Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>SHMMN</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SHMMN_Go_Live_Date__c</fullName>
        <label>SHMMN Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHMMN_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SHMMN Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SHP_SA_Subs_minus_Valid_Waiver__c</fullName>
        <formula>Total_Subs_in_SHP_Service_Areas_SA__c -  Total_SHP_SA_Subs_with_Valid_Waivers__c</formula>
        <label>SHP SA Subs minus Valid Waiver</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHP_vs_Renewal2__c</fullName>
        <description>Requirement-3358</description>
        <label>SHP vs Renewal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SHP_vs_Renewal3__c</fullName>
        <label>SHP vs Renewal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SHP_vs_Renewal__c</fullName>
        <description>Req-3358</description>
        <label>SHP vs Renewal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <label>Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RGA</fullName>
                </value>
                <value>
                    <fullName>PBJ</fullName>
                </value>
                <value>
                    <fullName>M2N</fullName>
                </value>
                <value>
                    <fullName>BAY</fullName>
                </value>
                <value>
                    <fullName>SHP</fullName>
                </value>
                <value>
                    <fullName>TSS</fullName>
                </value>
                <value>
                    <fullName>SHMMN</fullName>
                </value>
                <value>
                    <fullName>Amy Schenone</fullName>
                </value>
                <value>
                    <fullName>Gary Kaye</fullName>
                </value>
                <value>
                    <fullName>Kim McAndrew</fullName>
                </value>
                <value>
                    <fullName>Sondra Maas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Line_Product_Promotion__c</fullName>
        <label>Service Line/Product Promotion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bariatric</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Elder Care</fullName>
                </value>
                <value>
                    <fullName>Executive Health</fullName>
                </value>
                <value>
                    <fullName>IHH</fullName>
                </value>
                <value>
                    <fullName>Lung Nodule Clinic</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Health</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Neuroscience</fullName>
                </value>
                <value>
                    <fullName>Occupational Medicine</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>SHP (Sutter Health Plus)</fullName>
                </value>
                <value>
                    <fullName>Sutter Care at Home</fullName>
                </value>
                <value>
                    <fullName>Womens and Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_with_SHMMN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared with SHMMN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_with_SHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared with SHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slicing_with_Carrier_Name__c</fullName>
        <label>Slicing with Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_PMPM__c</fullName>
        <label>Sold PMPM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Broker__c</fullName>
        <description>Req 3389</description>
        <label>Strategic Broker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Opportunities__c</fullName>
        <label>Strategic Opportunities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Engagement</fullName>
                </value>
                <value>
                    <fullName>Mobile Clinic</fullName>
                </value>
                <value>
                    <fullName>On-Site Clinic</fullName>
                </value>
                <value>
                    <fullName>PEP Product</fullName>
                </value>
                <value>
                    <fullName>PHM Collaboration</fullName>
                </value>
                <value>
                    <fullName>Experiment A</fullName>
                </value>
                <value>
                    <fullName>Experiment B</fullName>
                </value>
                <value>
                    <fullName>Experiment C</fullName>
                </value>
                <value>
                    <fullName>Experiment D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Enrolled__c</fullName>
        <formula>Full_Time_Employees__c  - Out_of_Area__c  - Waived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_SHP_SA_Subs_with_Valid_Waivers__c</fullName>
        <label>Total SHP SA Subs with Valid Waivers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Subs_in_SHP_Service_Areas_SA__c</fullName>
        <label>Total Subs in SHP Service Areas (SA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underwriting_Discretionary_Discount__c</fullName>
        <description>Requirement-3358,Requirement -3182</description>
        <label>Underwriting Special Terms and Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waived__c</fullName>
        <label>Waived</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Employees__c</fullName>
        <formula>Account.NumberOfEmployees</formula>
        <label>Total FTE Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Enrolled2__c</fullName>
        <label># of Enrolled</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Enrolled3__c</fullName>
        <description>Req-3358</description>
        <label># of Enrolled</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Enrolled__c</fullName>
        <label># of Enrolled</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Subscribers__c</fullName>
        <label># of Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>regenerate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>regenerate?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_SHP_Opportunity</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SHP_Sales_Opportunity</value>
        </filters>
        <label>All SHP Opportunity</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>SHMMN_Opportunity</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SHMMN_Marketing_Employer</value>
        </filters>
        <label>SHMMN Opportunity</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VP_Sales_Marketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHMMN_Shared_Opportunity</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SHP_Sales_Opportunity</value>
        </filters>
        <filters>
            <field>Shared_with_SHP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SHMMN Shared Opportunity</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN_VP</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VP_Sales_Marketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHMNN_Opportunities_Awaiting_for_Accept</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SHP_Sales_Opportunity</value>
        </filters>
        <filters>
            <field>Shared_with_SHP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Accepted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SHMNN Opportunities:Awaiting for Accept</label>
        <sharedTo>
            <roleAndSubordinatesInternal>VP_Sales_Marketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Shared_Opportunity</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SHMMN_Marketing_Employer,Opportunity.SHP_Sales_Opportunity,Opportunity.SHP_Sales_Opportunity_RO</value>
        </filters>
        <filters>
            <field>Shared_with_SHMMN__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SHP Shared Opportunity</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN_VP</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VP_Sales_Marketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>SHMMN_Marketing_Employer</fullName>
        <active>true</active>
        <businessProcess>SHMMN Sales Process</businessProcess>
        <description>Opportunity for SHMMN.</description>
        <label>SHMMN Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHMMN_Opportunity_Read_Only</fullName>
        <active>true</active>
        <businessProcess>SHMMN Sales Process</businessProcess>
        <label>SHMMN Opportunity Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Opportunity</fullName>
        <active>true</active>
        <businessProcess>SHP Sales Process</businessProcess>
        <label>SHP Sales Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Sales_Opportunity_RO</fullName>
        <active>true</active>
        <businessProcess>SHP Sales Process</businessProcess>
        <label>SHP Sales Opportunity Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Broker_Of_Record_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>And((Broker1__c==null || Broker_Rep1__c==null),Broker_of_Record__c==true)</errorConditionFormula>
        <errorMessage>Broker of Record cannot be selected without having Broker and Broker Rep.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Classification_as_Mandatory_for_Service</fullName>
        <active>true</active>
        <description>Used for Classification field to be mandatory if the Service line is selected as SHP</description>
        <errorConditionFormula>AND(If (INCLUDES( Service_Line_Product_Promotion__c , &apos;SHP (Sutter Health Plus)&apos;),true,false),  ISPICKVAL(Classification__c,&quot;&quot; ) )</errorConditionFormula>
        <errorMessage>Please select the Classification for SHP Service line</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_is_required_on_Oppty_Won_Lost</fullName>
        <active>true</active>
        <description>Close Date is required when oppty stage is changed to Closed Won/ Closed Lost.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(StageName, &apos;Closed Won&apos;),ISPICKVAL(StageName, &apos;Closed Lost&apos;)),ISBLANK(Close_Date__c),   CONTAINS($Profile.Name, &apos;SHMMN&apos;) )</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Close Date is required when Opportunity Stage is Closed Won/Closed Lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enable_General_Agent_Section</fullName>
        <active>true</active>
        <description>Allow user to enter values in General Agent section if &quot;General Agent Applicable&quot; is checked</description>
        <errorConditionFormula>AND( General_Agent_Applicable__c = TRUE,
OR(
ISBLANK( General_Agent__c ),
ISBLANK( GA_Contact__c )))</errorConditionFormula>
        <errorMessage>General agent details can&apos;t be blank if &quot;General Agent Applicable&quot; is checked</errorMessage>
    </validationRules>
</CustomObject>